garage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage
  labels:
    app: garage
spec:
  type: LoadBalancer
  loadBalancerIP: ${LOAD_BALANCER_IP}
  ports:
    - port: 3900
      protocol: TCP
      name: api
    - port: 3901
      protocol: TCP
      name: rpc
    - port: 3902
      protocol: TCP
      name: web
  selector:
    app: garage
