garage/bucket-ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${NAME}-redirect
  annotations:
    nginx.ingress.kubernetes.io/temporal-redirect: https://${NAME}.internal.aleemhaji.com
spec:
  ingressClassName: nginx
  rules:
    - host: ${NAME}
    - host: ${NAME}.home
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${NAME}-bucket
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${NAME}.internal.aleemhaji.com
      secretName: internal-certificate-files
  rules:
    - host: ${NAME}.internal.aleemhaji.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garage
                port:
                  number: 3902
